added header sectione

--- a/index.html
+++ b/index.html
@@ -6,13 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <title>Introduce your product</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    
+   
 </head>
 
 <body>
-    <h1 class="">ripon</h1>
+    <header class="mt-5">
+        <div class="lg:flex justify-between ml-20  mr-20">
+            <ul class="lg:flex items-center lg:gap-30 text-center">
+                    <li><a class="text-[#505F98] text-2xl" href="">Home</a></li>
+                    <li><a class="text-[#505F98] text-2xl" href="">About</a></li>
+                    <li><a class="text-[#505F98] text-2xl" href="">Contact</a></li>
+            </ul>
+            <button class=" ml-20 w-[180px] h-[50px] rounded-xl text-white bg-[#111B47]">Buy Now</button>
+        </div>
+        <banner class="path">
+            <div>
+                <div class="hero bg-base-200 min-h-screen">
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                      <img
+                        src="image/Group.png"
+                        class="max-w-sm sm:ml-20 lg:ml-70 " />
+                        
+                      <div>
+                        <h1 class="text-5xl font-bold lg:w-[540px]">Introduce Your Product Quickly & Effectively</h1>
+                        <p class="lg:py-6 lg:w-[540px]">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                            mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                        </p>
+                        <button class="w-[200px] h-[40px] bg-[#111B47] text-white">Purchase UI Kit</button>
+                        <button class="w-[200px] h-[40px] border-4 ml-10 border-solid">Learn More</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </banner>
+    </header>
+    <div class="bg-[url('/image/path.png')]"></div>
 </body>
 
 </html>
