added to banner section

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             </ul>
             <button class=" ml-20 w-[180px] h-[50px] rounded-xl text-white bg-[#111B47]">Buy Now</button>
         </div>
-        <banner class="path">
+        <banner class="relative">
             <div>
-                <div class="hero bg-base-200 min-h-screen">
+                <div class="hero  min-h-screen">
                     <div class="hero-content flex-col lg:flex-row-reverse">
                       <img
                         src="image/Group.png"
-                        class="max-w-sm sm:ml-20 lg:ml-70 " />
+                        class="max-w-sm sm:ml-20  lg:ml-70" />
                         
                       <div>
                         <h1 class="text-5xl font-bold lg:w-[540px]">Introduce Your Product Quickly & Effectively</h1>
@@ -41,11 +41,44 @@
                         <button class="w-[200px] h-[40px] border-4 ml-10 border-solid">Learn More</button>
                       </div>
                     </div>
+                    <div class="bg-[url('/image/path.png')] lg:w-[800px] -mr-115 absolute h-[570px]"></div>
                   </div>
             </div>
         </banner>
     </header>
-    <div class="bg-[url('/image/path.png')]"></div>
+        <main>
+            <section>
+                <div>
+                    <div class="hero bg-base-200 min-h-screen">
+                        <div class="hero-content flex-col lg:flex-row-reverse">
+                          <img
+                            src="image/mobile login.png"
+                            class="max-w-sm  " />
+                          <div>
+                            <h1 class="text-5xl font-bold">Light, Fast & Powerful</h1>
+                            <p class="py-6 w-[540px] text-[#6F7CB2]">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+                            </p>
+                            <p class="py-6 w-[540px] text-[#6F7CB2]">
+                                mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                            </p>
+                            <div class="flex">
+                                <div>
+                                    <h3 class="font-bold">Title Goes Here</h3>
+                                    <p class="w-[260px]">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. commodo ligula eget dolor. </p>
+                                </div>
+                                <div>
+                                    <h3 class="font-bold">Title Goes Here</h3>
+                                    <p class="w-[260px]">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </section>
+        </main>
+    
 </body>
 
 </html>
