--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 
 <body>
     <header class="mt-5">
-        <div class="lg:flex justify-between ml-20  mr-20">
-            <ul class="lg:flex items-center lg:gap-30 text-center">
-                    <li><a class="text-[#505F98] text-2xl" href="">Home</a></li>
-                    <li><a class="text-[#505F98] text-2xl" href="">About</a></li>
-                    <li><a class="text-[#505F98] text-2xl" href="">Contact</a></li>
+        <div class="flex lg:justify-between lg:px-24">
+            <ul class="flex items-center lg:gap-30 gap-5 ml-5 text-center">
+                    <li><a class="text-[#505F98] lg:text-1xl" href="">Home</a></li>
+                    <li><a class="text-[#505F98] lg:text-1xl" href="">About</a></li>
+                    <li><a class="text-[#505F98] lg:text-1xl" href="">Contact</a></li>
             </ul>
-            <button class=" lg:ml-20 ml-8 w-[180px] h-[50px] rounded-xl text-white bg-[#111B47]">Buy Now</button>
+            <button class=" lg:ml-20 ml-8 lg:w-[180px] w-[120px] h-[30px]  text-white bg-[#111B47]">Buy Now</button>
         </div>
         <banner class="relative">
             <div>
-                <div class="hero  min-h-screen">
+                <div class="">
                     <div class="hero-content flex-col lg:flex-row-reverse">
                       <img
                         src="image/Group.png"
                         class="max-w-sm sm:ml-20  lg:ml-70" />
-                        
+                        <div class="bg-[url('/image/path.png')] lg:w-[800px] -mr-115 absolute h-[570px] "></div>
                       <div>
                         <h1 class="text-4xl font-bold lg:w-[540px]">Introduce Your Product Quickly & Effectively</h1>
                         <p class="lg:py-6 lg:w-[540px]">
@@ -39,12 +39,12 @@
                             mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                         </p>
                         <div class="mt-3">
-                          <button class="w-[180px] h-[30px] bg-[#111B47] text-white">Purchase UI Kit</button>
-                        <button class="w-[180px] h-[30px] border-4 lg:ml-10 border-solid">Learn More</button>
+                          <button class="w-[160px] h-[30px] bg-[#111B47] text-white">Purchase UI Kit</button>
+                        <button class="w-[160px] h-[30px] border-4 lg:ml-10 border-solid">Learn More</button>
                         </div>
                       </div>
                     </div>
-                    <div class="bg-[url('/image/path.png')] lg:w-[800px] -mr-115 absolute h-[570px]"></div>
+                
                   </div>
             </div>
         </banner>
